fix article navigation overflow on medium device and set page layout in container

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,6 +50,11 @@ Style for post content navigator
   .article-nav-aside {
     a {
       color: lightgray;
+      text-overflow: ellipsis;
+      /* Required for text-overflow to do anything */
+      white-space: nowrap;
+      overflow: hidden;
+
       &:hover {
         text-decoration: none;
         color: lightslategray;
